--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,12 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Start Server",
+      "program": "${workspaceFolder}/src/start.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Jest Test",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
       "args": [
